implement guest login system and layouts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -412,6 +412,15 @@ a {
   }
 }
 
+/* guest-login */
+#guest-login {
+  margin: 0 auto;
+  h4 {
+    text-align: center;
+    margin: 10px 0;
+  }
+}
+
 /* jumbotron */
 .jumbotron {
   margin: 20px 10px;
