--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,6 +23,7 @@
     <p>操作方法をご確認の際は'Learn more' もしくは 'About'のリンクをクリックしてください。</p></br>
     <%= button_to 'Signup Here', new_user_registration_path, method: :get, class: 'btn btn-success btn-lg btn-block' %></br>
     <%= button_to 'Login Here', new_user_session_path, method: :get, class: 'btn btn-primary btn-lg btn-block' %></br>
+    <%= button_to 'ゲストログイン(閲覧用)', guest_login_users_path, data: { confirm: Settings.guest_login_msg }, class: 'btn btn-primary btn-lg btn-block' %></br>
     <%= button_to 'Learn more...', about_path, method: :get, class: 'btn btn-outline-secondary btn-lg' %>
   </div>
 <% end %>
