--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,15 +15,5 @@
     <button type='button' class='btn btn-lg btn-primary' disabled>消費期限をチェック</button>
   </div>
 <% else %>
-  <div class='jumbotron'>
-    <h1 class='display-4'>Freedger へようこそ！</h1>
-    <p class='lead'>このWebアプリケーションでは冷蔵庫及び冷凍庫内にある 食品や飲料の消費期限を管理することができます。</p>
-    <hr class='my-4'>
-    <p>このWebアプリケーションは、ユーザー登録及びログインを行う必要があります。</p></br>
-    <p>操作方法をご確認の際は'Learn more' もしくは 'About'のリンクをクリックしてください。</p></br>
-    <%= button_to 'Signup Here', new_user_registration_path, method: :get, class: 'btn btn-success btn-lg btn-block' %></br>
-    <%= button_to 'Login Here', new_user_session_path, method: :get, class: 'btn btn-primary btn-lg btn-block' %></br>
-    <%= button_to 'ゲストログイン(閲覧用)', guest_login_users_path, data: { confirm: Settings.guest_login_msg }, class: 'btn btn-primary btn-lg btn-block' %></br>
-    <%= button_to 'Learn more...', about_path, method: :get, class: 'btn btn-outline-secondary btn-lg' %>
-  </div>
+  <%= render 'fridge_form' %>
 <% end %>
